--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,18 @@
 <!--			<artifactId>netty-socketio</artifactId>-->
 <!--			<version>1.7.7</version>-->
 <!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.corundumstudio.socketio</groupId>-->
+<!--			<artifactId>netty-socketio</artifactId>-->
+<!--			<version>1.7.19</version>-->
+<!--		</dependency>-->
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+<!--		<dependency>-->
+<!--			<groupId>com.fasterxml.jackson.core</groupId>-->
+<!--			<artifactId>jackson-databind</artifactId>-->
+<!--			<version>2.13.3</version>-->
+<!--		</dependency>-->
+
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-core</artifactId>
